pkg/lang/syntax/testdata/ub/invalid/duplicate-fields/factory/local-declaration.ub
factory: {
  locals: {
    dup: 'one'
    dup: 'two'
  }
}
